other-cel/ingress-host-match-tls/.chainsaw-test/ingress-good.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goodingress01
spec:
  ingressClassName: someingress
  rules:
  - host: endpoint01
    http:
      paths:
      - backend:
          service:
            name: demo-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - endpoint01
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goodingress02
spec:
  ingressClassName: nginx-int
  rules:
  - host: endpoint01
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  - host: endpoint02
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  tls:
  - hosts:
    - endpoint01
    - endpoint02
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goodingress03
spec:
  ingressClassName: nginx-int
  rules:
  - host: endpoint01
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  - host: endpoint02
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  tls:
  - hosts:
    - endpoint02
    - endpoint01
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goodingress04
spec:
  ingressClassName: nginx-int
  rules:
  - host: endpoint02
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  - host: endpoint01
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  tls:
  - hosts:
    - endpoint01
    - endpoint02
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goodingress05
spec:
  ingressClassName: nginx-int
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  - host: endpoint02
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  tls:
  - hosts:
    - endpoint02
    - foo.bar.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goodingress06
spec:
  ingressClassName: nginx-int
  rules:
  - host: endpoint01
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: bar
            port:
              number: 80
  - host: "*.foo.com"
    http:
      paths:
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  tls:
  - hosts:
    - endpoint01
    - "*.foo.com"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goodingress07
spec:
  defaultBackend:
    resource:
      apiGroup: k8s.example.com
      kind: StorageBucket
      name: foo-bar
  rules:
    - http:
        paths:
          - path: /foo
            pathType: ImplementationSpecific
            backend:
              resource:
                apiGroup: k8s.example.com
                kind: StorageBucket
                name: foo-bar
